--- a/css/styles_login.css
+++ b/css/styles_login.css
@@ -83,6 +83,11 @@
     text-decoration: underline;
 }
 
+.logo_menu{
+    width: 50px;
+    height: 50px;
+    margin-right: 20px;
+}
 /* Estilos del footer */
 .footer_page {
     background-color: #000;
