--- a/css/styles_perfil_cliente.css
+++ b/css/styles_perfil_cliente.css
@@ -12,10 +12,10 @@
 }
 
 .div-foto-name{
-    width: 90vw;
+    width: 50vw;
     background: linear-gradient(to bottom, #000, transparent);
     position: absolute;
-    top: 50vh;
+    top: 43vh;
     border-radius: 20px;
     font-weight: bolder;
     box-shadow: 0 0 40px 0 #0001;
@@ -29,9 +29,11 @@
 
 .name{
     position: absolute;
-    top: 5vh;
-    left: 40vw;
+    top: 5%;
+    left: 40%;
     font-size: 1em;
+    width: 100%;
+    text-align: center;
 }
 
 .descripcion-personal{
