--- a/css/styles-historial.css
+++ b/css/styles-historial.css
@@ -1,10 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 .offers-box {
     max-height: 100vh; /* Define el alto máximo del contenedor */
     overflow-y: auto; /* Activa la barra de desplazamiento vertical */
@@ -12,7 +5,7 @@ body {
     padding: 10px;
     margin: 20px auto;
     width: 50%; /* Ajusta el ancho del contenedor */
-    background-color: #0006;
+    background-color: #111;
     scrollbar-width: thin; /* Compatibilidad con Firefox */
     scrollbar-color: #000c #ccc; /* Colores del scroll en Firefox */
 }
@@ -36,6 +29,12 @@ body {
 
 .offer {
     margin-bottom: 20px;
+}
+
+.div-title{
+    background-color: #66fa;
+    border-radius: 10px;
+    box-shadow: 0 0 30px 0 #111;
 }
 
 .offer h4 {
