--- a/css/styles_perfil_cliente.css
+++ b/css/styles_perfil_cliente.css
@@ -19,6 +19,7 @@
     border-radius: 20px;
     font-weight: bolder;
     box-shadow: 0 0 40px 0 #0001;
+    padding: 10px 0;
 }
 .perfil-pic{
     width: 120px;
