--- a/css/stylesBootstrap.css
+++ b/css/stylesBootstrap.css
@@ -10,6 +10,7 @@
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -11075,6 +11076,20 @@ body {
   background-attachment: scroll;
   background-size: cover;
 }
+
+.masthead2 {
+
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/contactCampus.png");
+  background-color: #1e2326;
+  color: #fff;
+  padding: 50px;
+}
+
+.spacing {
+  height: 800px;
+  background: #fffdfd00;
+}
+
 .masthead h1, .masthead .h1 {
   font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 2.5rem;
