--- a/css/styles_index.css
+++ b/css/styles_index.css
@@ -60,13 +60,14 @@
 /* Estilos para la sección del equipo con imagen de fondo y capa oscura */
 .team-section {
     position: relative;
-    background-image: url('/CampusConect/assets/img/bg-masthead.jpg'); /* Cambia la ruta por la de tu imagen */
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.182) 75%, #000 100%), url("../assets/img/bg-masthead.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     padding: 80px 0; /* Ajusta el espacio superior e inferior */
     min-height: 665px; /* Controla el tamaño mínimo de la sección */
-    color: #ffffff;
+    color: #0000005f;
+
 }
 
 .team-section .overlay {
