--- a/css/stylesBootstrap.css
+++ b/css/stylesBootstrap.css
@@ -173,6 +173,8 @@ p {
   margin-bottom: 1rem;
 }
 
+
+
 abbr[title] {
   -webkit-text-decoration: underline dotted;
           text-decoration: underline dotted;
@@ -8274,7 +8276,7 @@ textarea.form-control-lg {
 
 .bg-primary {
   --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity)) !important;
+  background-color: rgb(24 26 26) !important;
 }
 
 .bg-secondary {
@@ -8304,7 +8306,7 @@ textarea.form-control-lg {
 
 .bg-light {
   --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
+  background-color: rgb(86 110 133) !important;
 }
 
 .bg-dark {
@@ -11135,7 +11137,7 @@ body {
 }
 
 .projects-section {
-  padding: 10rem 0;
+  padding: 5rem 0;
 }
 .projects-section .featured-text {
   padding: 2rem;
