--- a/css/styles_perfil_cliente.css
+++ b/css/styles_perfil_cliente.css
@@ -1,5 +1,5 @@
 .div-banner{
-    background: #000c;
+    background: rgba(0, 0, 0, 0.488);
     border-radius: 10px;
     position: absolute;
     top: 20vh;
@@ -61,10 +61,26 @@
 #btn-edit-profile{
     width: 200px;
     padding: 10px 30px;
-    box-shadow: 0 0 40px 0 #fff1;
+    box-shadow: 0 0 40px 0 rgba(120, 69, 175, 0.699);
+    position: absolute;
+    top: 60px;
+    background-color: #4F4FB5;
 }
 
-
+.slogan-text {
+    position: absolute;
+    top: 490px; /* Ajusta según tu diseño */
+    width: 91%; /* Asegura que el texto quede centrado */
+    text-align: center;
+    font-size: 1.2em; /* Tamaño reducido */
+    color: #fff;
+    font-weight: bold;
+    background: linear-gradient(90deg, #0e8f1b, #074e0b); /* Gradiente violeta */
+    padding: 10px 5px; /* Espaciado interno reducido */
+    border-radius: 10px; /* Esquinas más pequeñas */
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2); /* Sombra más sutil */
+    z-index: 2; /* Asegura que esté al frente */
+}
 
 .form-container{
     width: 40vw;
