--- a/css/style_historial_empresa.css
+++ b/css/style_historial_empresa.css
@@ -54,7 +54,7 @@ body {
 }
 
 button {
-    background-color: #000;
+    background-color: #4F4FB5;
     color: white;
     border: 1px solid #fff1;
     padding: 8px 20px;
@@ -73,4 +73,13 @@ button:hover {
 .spacing2{
     height: 300px;
     background: #ffffff00;
+}
+
+.Requerimientos{
+
+    p {
+        margin-top: 0;
+        margin-bottom: 0.5rem;
+      }
+      
 }
