--- a/css/styles-historial.css
+++ b/css/styles-historial.css
@@ -54,7 +54,7 @@ body {
 }
 
 button {
-    background-color: #000;
+    background-color: #4F4FB5;
     color: white;
     border: 1px solid #fff1;
     padding: 8px 20px;
